--- a/src/components/translation/de.json
+++ b/src/components/translation/de.json
@@ -1,41 +1,41 @@
 {
   "helmet": {
-    "title": "GOLDENDIE ist eine Marke der Firma LKT Group GmbH, die technische Ersatzteile für industrielle Anlagen vertreibt, insbesondere Matrizen, Hülsen und Koller für Pellet-Pressen aller Art, Exzenterwellen sowie Hammer, Wellen und Siebe für Hammermühlen und Siebanlagen",
-    "description": "GOLDENDIE der Firma LKT Group GmbH, die technische Ersatzteile für industrielle Anlagen vertreibt, insbesondere Matrizen, Hülsen und Koller für Pellet-Pressen aller Art, Exzenterwellen sowie Hammer, Wellen und Siebe für Hammermühlen und Siebanlagen, Produktion, Herstellung von Ersatzteilen und technischen Komponenten nach Kundenzeichnungen"
+    "title": "GOLDENMILL ist eine Marke der Firma LKT Group GmbH, die technische Ersatzteile für industrielle Anlagen vertreibt, insbesondere Matrizen, Hülsen und Koller für Pellet-Pressen aller Art, Exzenterwellen sowie Hammer, Wellen und Siebe für Hammermühlen und Siebanlagen",
+    "description": "GOLDENMILL der Firma LKT Group GmbH, die technische Ersatzteile für industrielle Anlagen vertreibt, insbesondere Matrizen, Hülsen und Koller für Pellet-Pressen aller Art, Exzenterwellen sowie Hammer, Wellen und Siebe für Hammermühlen und Siebanlagen, Produktion, Herstellung von Ersatzteilen und technischen Komponenten nach Kundenzeichnungen"
   },
   "seo": {
-    "defaultTitle": "GoldenDie - LKE Group GmbH | Premium Matrizen und Kollerhülsen für Pelletpressen",
+    "defaultTitle": "GoldenMill - LKE Group GmbH | Premium Matrizen und Kollerhülsen für Pelletpressen",
     "defaultDescription": "Herstellung und Lieferung von hochwertigen Matrizen, Kollerhülsen und Ersatzteilen für Pelletpressen von LKE Group GmbH. Überlegene Härte, individuelle Abmessungen, weltweite Lieferung. Über 15 Jahre Erfahrung in der Herstellung von Industrieanlagen.",
-    "defaultKeywords": "LKE Group GmbH, GoldenDie, Matrizen, Kollerhülsen, Pelletpressen, Ersatzteile, Produktion, Industrieanlagen, individuelle Fertigung, hohe Qualität, weltweite Lieferung, Pelletproduktion, Granulierung, Extrusion",
+    "defaultKeywords": "LKE Group GmbH, GoldenMill, Matrizen, Kollerhülsen, Pelletpressen, Ersatzteile, Produktion, Industrieanlagen, individuelle Fertigung, hohe Qualität, weltweite Lieferung, Pelletproduktion, Granulierung, Extrusion",
     "matrix": {
-      "title": "Premium Matrizen für Pelletpressen | LKE Group GmbH | GoldenDie",
+      "title": "Premium Matrizen für Pelletpressen | LKE Group GmbH | GoldenMill",
       "description": "Hochwertige Matrizen für Pelletpressen aller Art von LKE Group GmbH. Individuelle Fertigung nach Kundenzeichnungen, überlegene Härte und Verschleißfestigkeit, bis zu 10% weniger Verschleiß im Vergleich zu Wettbewerbern. Flachmatrizen, Ringmatrizen und Klemmmatrizen verfügbar.",
-      "keywords": "Matrizen für Pelletpressen, LKE Group GmbH, GoldenDie, Matrizenherstellung, Industrieanlagen, Ersatzteile, Flachmatrize, Ringmatrize, Klemmmatrize, individuelle Fertigung, hohe Härte, Verschleißfestigkeit, Pelletproduktion, Granulierung"
+      "keywords": "Matrizen für Pelletpressen, LKE Group GmbH, GoldenMill, Matrizenherstellung, Industrieanlagen, Ersatzteile, Flachmatrize, Ringmatrize, Klemmmatrize, individuelle Fertigung, hohe Härte, Verschleißfestigkeit, Pelletproduktion, Granulierung"
     },
     "shell": {
-      "title": "Premium Kollerhülsen für Pelletpressen | LKE Group GmbH | GoldenDie",
+      "title": "Premium Kollerhülsen für Pelletpressen | LKE Group GmbH | GoldenMill",
       "description": "Hochwertige Kollerhülsen für Pelletpressen von LKE Group GmbH. Verschiedene Oberflächentypen (gelocht, geriffelt, Fischgräte), individuelle Abmessungen, überlegene Verschleißfestigkeit. Bis zu 7% weniger Verschleiß im Vergleich zu Wettbewerbern. Für Flachmatrizen, Ringmatrizen und Klemmmatrizen.",
-      "keywords": "Kollerhülsen für Pelletpressen, LKE Group GmbH, GoldenDie, Koller für Pellet-Pressen, Industrieanlagen, Ersatzteile, gelochte Oberfläche, geriffelte Oberfläche, Fischgräten-Oberfläche, individuelle Abmessungen, hohe Härte, Verschleißfestigkeit, Pelletproduktion"
+      "keywords": "Kollerhülsen für Pelletpressen, LKE Group GmbH, GoldenMill, Koller für Pellet-Pressen, Industrieanlagen, Ersatzteile, gelochte Oberfläche, geriffelte Oberfläche, Fischgräten-Oberfläche, individuelle Abmessungen, hohe Härte, Verschleißfestigkeit, Pelletproduktion"
     },
     "spare-parts": {
-      "title": "Premium Ersatzteile für Pelletpressen | LKE Group GmbH | GoldenDie",
+      "title": "Premium Ersatzteile für Pelletpressen | LKE Group GmbH | GoldenMill",
       "description": "Hochwertige Ersatzteile für Pelletpressen und Hammermühlen von LKE Group GmbH. Exzenterwellen, Hämmer, Wellen, Siebe und andere Komponenten. Individuelle Fertigung nach Kundenspezifikationen. Für Granulierung, Extrusion, Mahlen, Transport, Kühlung, Lagerung und elektrische Systeme.",
-      "keywords": "Ersatzteile für Pelletpressen, LKE Group GmbH, GoldenDie, Hammermühlen, Siebanlagen, Industrieanlagen, Exzenterwellen, Hämmer, Siebe, individuelle Fertigung, hohe Qualität, Granulierung, Extrusion, Mahlen, Transport, Kühlung, Lagerung, elektrische Systeme"
+      "keywords": "Ersatzteile für Pelletpressen, LKE Group GmbH, GoldenMill, Hammermühlen, Siebanlagen, Industrieanlagen, Exzenterwellen, Hämmer, Siebe, individuelle Fertigung, hohe Qualität, Granulierung, Extrusion, Mahlen, Transport, Kühlung, Lagerung, elektrische Systeme"
     },
     "about": {
-      "title": "Über LKE Group GmbH | GoldenDie | Premium Industrieanlagenhersteller",
+      "title": "Über LKE Group GmbH | GoldenMill | Premium Industrieanlagenhersteller",
       "description": "LKE Group GmbH - Hersteller von hochwertigen Matrizen, Kollerhülsen und Ersatzteilen für Pelletpressen. Über 15 Jahre Erfahrung, eigene Produktion, CE-zertifizierte Anlagen, internationale Lieferungen. Individuelle Fertigung nach Kundenspezifikationen.",
-      "keywords": "LKE Group GmbH, GoldenDie, über uns, Matrizenherstellung, Kollerhülsen für Pelletpressen, Ersatzteile, Industrieanlagenhersteller, CE-zertifiziert, individuelle Fertigung, internationale Lieferungen, hohe Qualität, Pelletproduktion"
+      "keywords": "LKE Group GmbH, GoldenMill, über uns, Matrizenherstellung, Kollerhülsen für Pelletpressen, Ersatzteile, Industrieanlagenhersteller, CE-zertifiziert, individuelle Fertigung, internationale Lieferungen, hohe Qualität, Pelletproduktion"
     },
     "contacts": {
-      "title": "Kontakt LKE Group GmbH | GoldenDie | Premium Industrieanlagenhersteller",
+      "title": "Kontakt LKE Group GmbH | GoldenMill | Premium Industrieanlagenhersteller",
       "description": "Kontaktieren Sie LKE Group GmbH für die Bestellung von hochwertigen Matrizen, Kollerhülsen und Ersatzteilen für Pelletpressen. Fachkundige Beratung, detaillierte Kostenberechnung, individuelle Lösungen. Weltweite Lieferung von Premium-Komponenten für Industrieanlagen.",
-      "keywords": "Kontakt LKE Group GmbH, GoldenDie, Matrizenbestellung, Kollerhülsen für Pelletpressen, Ersatzteile, Herstellerkontakt, Industrieanlagen, fachkundige Beratung, Kostenberechnung, individuelle Lösungen, weltweite Lieferung, Premium-Qualität"
+      "keywords": "Kontakt LKE Group GmbH, GoldenMill, Matrizenbestellung, Kollerhülsen für Pelletpressen, Ersatzteile, Herstellerkontakt, Industrieanlagen, fachkundige Beratung, Kostenberechnung, individuelle Lösungen, weltweite Lieferung, Premium-Qualität"
     },
     "product": {
-      "title": "{{productName}} | LKE Group GmbH | GoldenDie",
+      "title": "{{productName}} | LKE Group GmbH | GoldenMill",
       "description": "{{productName}} von LKE Group GmbH. {{productDescription}} Hochwertige Fertigung, individuelle Abmessungen, überlegene Verschleißfestigkeit. Für Pelletpressen und Industrieanlagen.",
-      "keywords": "{{productName}}, LKE Group GmbH, GoldenDie, Matrizen, Kollerhülsen, Ersatzteile, Pelletpressen, Industrieanlagen, hohe Qualität, individuelle Fertigung, Verschleißfestigkeit, Pelletproduktion, Granulierung, Extrusion"
+      "keywords": "{{productName}}, LKE Group GmbH, GoldenMill, Matrizen, Kollerhülsen, Ersatzteile, Pelletpressen, Industrieanlagen, hohe Qualität, individuelle Fertigung, Verschleißfestigkeit, Pelletproduktion, Granulierung, Extrusion"
     }
   },
   "granulator": "Pellet",
@@ -141,6 +141,11 @@
     "GM650": "GM650",
     "GM850": "GM850",
     "GM850D": "GM850D"
+  },
+  "granulatorParameters": {
+    "width": "ЗАМЕНИТЬ",
+    "height": "ЗАМЕНИТЬ",
+    "length": "ЗАМЕНИТЬ"
   },
   "diagrams": {
     "millGranulator": {
@@ -264,7 +269,7 @@
       "title": "FIRMENSPROFIL",
       "description": "ÜBER UNS",
       "descriptionBg": "Über das Unternehmen",
-      "text": "«GOLDEN DIE» ist eine Marke der Firma LKT Group GmbH, die technische Ersatzteile für industrielle Anlagen vertreibt, insbesondere Matrizen, Hülsen und Koller für Pellet-Pressen aller Art, Exzenterwellen sowie Hammer, Wellen und Siebe für Hammermühlen und Siebanlagen. Die Produktion unterstützt alle Ersatzteile in kleinen und großen Mengen gemäß den Zeichnungen, die in der Datenbank der Firma LKT Group GmbH vorhanden sind, sowie exklusiv gemäß den Zeichnungen, die von den Kunden des Unternehmens bereitgestellt werden.\n\nJede unter der Marke «GOLDEN DIE» hergestellte Einheit durchläuft eine Verarbeitung auf CE-zertifizierten Maschinen, was die Qualität und die Konformität der Verarbeitung des Produkts garantiert."
+      "text": "«GOLDEN MILL» ist eine Marke der Firma LKT Group GmbH, die technische Ersatzteile für industrielle Anlagen vertreibt, insbesondere Matrizen, Hülsen und Koller für Pellet-Pressen aller Art, Exzenterwellen sowie Hammer, Wellen und Siebe für Hammermühlen und Siebanlagen. Die Produktion unterstützt alle Ersatzteile in kleinen und großen Mengen gemäß den Zeichnungen, die in der Datenbank der Firma LKT Group GmbH vorhanden sind, sowie exklusiv gemäß den Zeichnungen, die von den Kunden des Unternehmens bereitgestellt werden.\n\nJede unter der Marke «GOLDEN DIE» hergestellte Einheit durchläuft eine Verarbeitung auf CE-zertifizierten Maschinen, was die Qualität und die Konformität der Verarbeitung des Produkts garantiert."
     },
     "history": {
       "title": "FIRMENGESCHICHTE",
@@ -298,7 +303,7 @@
     },
     "email": {
       "title": "E-mail",
-      "email": "info@goldendie.de"
+      "email": "info@goldenmill.de"
     },
     "phone": {
       "title": "Telefon",
@@ -318,7 +323,7 @@
     "contacts": {
       "title": "Kontakt",
       "geo": "Lindenstraße 48-52, 40233 Düsseldorf, Deutschland",
-      "email": "info@goldendie.de",
+      "email": "info@goldenmill.de",
       "phone": "+49 (0) 211 9891272"
     },
     "social": {
@@ -326,7 +331,7 @@
     }
   },
   "subFooter": {
-    "copyright": "2023. Urheberrecht – alle Rechte vorbehalten",
+    "copyright": "2025. Urheberrecht – alle Rechte vorbehalten",
     "serviceInfo": "Impressum",
     "privacyPolicy": "Datenschutzerklärung"
   }
