--- a/src/components/translation/en.json
+++ b/src/components/translation/en.json
@@ -1,41 +1,41 @@
 {
   "helmet": {
-    "title": "GOLDENDIE is a brand of LKT Group GmbH that supplies technical spare parts for industrial equipment, including dies, shells, rollers for pellet mills of any type, eccentric shafts, as well as hammers, shafts, and screens for hammer mills and separators",
-    "description": "GOLDENDIE LKT Group GmbH, technical spare parts for industrial equipment, including dies, shells, rollers for pellet mills of any type, eccentric shafts, as well as hammers, shafts, and screens for hammer mills and separators, production, manufacturing of spare parts and engineering components according to customer drawings"
+    "title": "GOLDENMILL is a brand of LKT Group GmbH that supplies technical spare parts for industrial equipment, including dies, shells, rollers for pellet mills of any type, eccentric shafts, as well as hammers, shafts, and screens for hammer mills and separators",
+    "description": "GOLDENMILL LKT Group GmbH, technical spare parts for industrial equipment, including dies, shells, rollers for pellet mills of any type, eccentric shafts, as well as hammers, shafts, and screens for hammer mills and separators, production, manufacturing of spare parts and engineering components according to customer drawings"
   },
   "seo": {
-    "defaultTitle": "GoldenDie - LKE Group GmbH | Premium Dies and Roller Shells for Pellet Mills",
+    "defaultTitle": "GoldenMill - LKE Group GmbH | Premium Dies and Roller Shells for Pellet Mills",
     "defaultDescription": "Manufacturing and supply of high-quality dies, roller shells, and spare parts for pellet mills from LKE Group GmbH. Superior hardness, custom dimensions, worldwide delivery. Over 15 years of experience in industrial equipment manufacturing.",
-    "defaultKeywords": "LKE Group GmbH, GoldenDie, dies, roller shells, pellet mills, spare parts, manufacturing, industrial equipment, custom manufacturing, high quality, worldwide delivery, pellet production, granulation, extrusion",
+    "defaultKeywords": "LKE Group GmbH, GoldenMill, dies, roller shells, pellet mills, spare parts, manufacturing, industrial equipment, custom manufacturing, high quality, worldwide delivery, pellet production, granulation, extrusion",
     "matrix": {
-      "title": "Premium Dies for Pellet Mills | LKE Group GmbH | GoldenDie",
+      "title": "Premium Dies for Pellet Mills | LKE Group GmbH | GoldenMill",
       "description": "High-quality dies for pellet mills of any type from LKE Group GmbH. Custom manufacturing according to customer drawings, superior hardness and wear resistance, up to 10% less wear compared to competitors. Flat dies, ring dies, and twin-track dies available.",
-      "keywords": "dies for pellet mills, LKE Group GmbH, GoldenDie, die manufacturing, industrial equipment, spare parts, flat die, ring die, twin-track die, custom manufacturing, high hardness, wear resistance, pellet production, granulation"
+      "keywords": "dies for pellet mills, LKE Group GmbH, GoldenMill, die manufacturing, industrial equipment, spare parts, flat die, ring die, twin-track die, custom manufacturing, high hardness, wear resistance, pellet production, granulation"
     },
     "shell": {
-      "title": "Premium Roller Shells for Pellet Mills | LKE Group GmbH | GoldenDie",
+      "title": "Premium Roller Shells for Pellet Mills | LKE Group GmbH | GoldenMill",
       "description": "High-quality roller shells for pellet mills from LKE Group GmbH. Various surface types (perforated, corrugated, fishbone), custom dimensions, superior wear resistance. Up to 7% less wear compared to competitors. For flat dies, ring dies, and twin-track dies.",
-      "keywords": "roller shells for pellet mills, LKE Group GmbH, GoldenDie, rollers for pellet mills, industrial equipment, spare parts, perforated surface, corrugated surface, fishbone surface, custom dimensions, high hardness, wear resistance, pellet production"
+      "keywords": "roller shells for pellet mills, LKE Group GmbH, GoldenMill, rollers for pellet mills, industrial equipment, spare parts, perforated surface, corrugated surface, fishbone surface, custom dimensions, high hardness, wear resistance, pellet production"
     },
     "spare-parts": {
-      "title": "Premium Spare Parts for Pellet Mills | LKE Group GmbH | GoldenDie",
+      "title": "Premium Spare Parts for Pellet Mills | LKE Group GmbH | GoldenMill",
       "description": "High-quality spare parts for pellet mills and hammer mills from LKE Group GmbH. Eccentric shafts, hammers, shafts, screens, and other components. Custom manufacturing according to customer specifications. For granulation, extrusion, grinding, transport, cooling, storage, and electrical systems.",
-      "keywords": "spare parts for pellet mills, LKE Group GmbH, GoldenDie, hammer mills, separators, industrial equipment, eccentric shafts, hammers, screens, custom manufacturing, high quality, granulation, extrusion, grinding, transport, cooling, storage, electrical systems"
+      "keywords": "spare parts for pellet mills, LKE Group GmbH, GoldenMill, hammer mills, separators, industrial equipment, eccentric shafts, hammers, screens, custom manufacturing, high quality, granulation, extrusion, grinding, transport, cooling, storage, electrical systems"
     },
     "about": {
-      "title": "About LKE Group GmbH | GoldenDie | Premium Industrial Equipment Manufacturer",
+      "title": "About LKE Group GmbH | GoldenMill | Premium Industrial Equipment Manufacturer",
       "description": "LKE Group GmbH - manufacturer of high-quality dies, roller shells, and spare parts for pellet mills. Over 15 years of experience, in-house production, CE-certified equipment, international deliveries. Custom manufacturing according to customer specifications.",
-      "keywords": "LKE Group GmbH, GoldenDie, about company, die manufacturing, roller shells for pellet mills, spare parts, industrial equipment manufacturer, CE-certified, custom manufacturing, international deliveries, high quality, pellet production"
+      "keywords": "LKE Group GmbH, GoldenMill, about company, die manufacturing, roller shells for pellet mills, spare parts, industrial equipment manufacturer, CE-certified, custom manufacturing, international deliveries, high quality, pellet production"
     },
     "contacts": {
-      "title": "Contact LKE Group GmbH | GoldenDie | Premium Industrial Equipment Manufacturer",
+      "title": "Contact LKE Group GmbH | GoldenMill | Premium Industrial Equipment Manufacturer",
       "description": "Contact LKE Group GmbH for ordering high-quality dies, roller shells, and spare parts for pellet mills. Expert consultations, detailed cost calculations, individual solutions. Worldwide delivery of premium industrial equipment components.",
-      "keywords": "contact LKE Group GmbH, GoldenDie, die ordering, roller shells for pellet mills, spare parts, contact manufacturer, industrial equipment, expert consultations, cost calculations, individual solutions, worldwide delivery, premium quality"
+      "keywords": "contact LKE Group GmbH, GoldenMill, die ordering, roller shells for pellet mills, spare parts, contact manufacturer, industrial equipment, expert consultations, cost calculations, individual solutions, worldwide delivery, premium quality"
     },
     "product": {
-      "title": "{{productName}} | LKE Group GmbH | GoldenDie",
+      "title": "{{productName}} | LKE Group GmbH | GoldenMill",
       "description": "{{productName}} from LKE Group GmbH. {{productDescription}} High-quality manufacturing, custom dimensions, superior wear resistance. For pellet mills and industrial equipment.",
-      "keywords": "{{productName}}, LKE Group GmbH, GoldenDie, dies, roller shells, spare parts, pellet mills, industrial equipment, high quality, custom manufacturing, wear resistance, pellet production, granulation, extrusion"
+      "keywords": "{{productName}}, LKE Group GmbH, GoldenMill, dies, roller shells, spare parts, pellet mills, industrial equipment, high quality, custom manufacturing, wear resistance, pellet production, granulation, extrusion"
     }
   },
   "granulator": "Pellet",
@@ -139,6 +139,11 @@
     "GM650": "GM650",
     "GM850": "GM850",
     "GM850D": "GM850D"
+  },
+  "granulatorParameters": {
+    "width": "ЗАМЕНИТЬ",
+    "height": "ЗАМЕНИТЬ",
+    "length": "ЗАМЕНИТЬ"
   },
   "diagrams": {
     "millGranulator": {
@@ -262,7 +267,7 @@
       "title": "COMPANY PROFILE",
       "description": "ABOUT US",
       "descriptionBg": "COMPANY PROFILE",
-      "text": "GOLDENDIE is a brand of LKT Group GmbH that supplies technical spare parts for industrial equipment, including dies, shells, rollers for pellet mills of any type, eccentric shafts, as well as hammers, shafts, and screens for hammer mills and separators.\n\nThe production supports any spare parts in small and large volumes based on the drawings available in the LKT Group GmbH database, as well as exclusively based on drawings provided by the customers.\n\nEvery unit produced under the GOLDENDIE brand is processed using CE-certified equipment, ensuring the quality and compliance of the product's workmanship."
+      "text": "GoldenMill is a brand of LKT Group GmbH that supplies technical spare parts for industrial equipment, including dies, shells, rollers for pellet mills of any type, eccentric shafts, as well as hammers, shafts, and screens for hammer mills and separators.\n\nThe production supports any spare parts in small and large volumes based on the drawings available in the LKT Group GmbH database, as well as exclusively based on drawings provided by the customers.\n\nEvery unit produced under the GOLDENMILL brand is processed using CE-certified equipment, ensuring the quality and compliance of the product's workmanship."
     },
     "history": {
       "title": "COMPANY HISTORY",
@@ -296,7 +301,7 @@
     },
     "email": {
       "title": "E-mail",
-      "email": "info@goldendie.de"
+      "email": "info@goldenmill.de"
     },
     "phone": {
       "title": "Tel.",
@@ -316,7 +321,7 @@
     "contacts": {
       "title": "Contact",
       "geo": "Lindenstraße 48-52, 40233 Düsseldorf, Germany",
-      "email": "info@goldendie.de",
+      "email": "info@goldenmill.de",
       "phone": "+49 (0) 211 9891272"
     },
     "social": {
@@ -324,7 +329,7 @@
     }
   },
   "subFooter": {
-    "copyright": "2023. Copyright - all rights reserved",
+    "copyright": "2025. Copyright - all rights reserved",
     "serviceInfo": "Imprint",
     "privacyPolicy": "Privacy policy"
   }
