--- a/src/components/translation/ru.json
+++ b/src/components/translation/ru.json
@@ -1,41 +1,41 @@
 {
   "helmet": {
-    "title": "GOLDENDIE является брендом компании LKT Group GmbH, который поставляет на рынок технические запчасти для промышленного оборудования, в частности матрицы, обечайки, ролики для пресс-гранулятора любого типа, эксцентриковые валы, молотки, оси и сито для молотковой дробилки и сепараторов",
-    "description": "GOLDENDIE компании LKT Group GmbH, технические запчасти для промышленного оборудования, в частности матрицы, обечайки, ролики для пресс-гранулятора любого типа, эксцентриковые валы, молотки, оси и сито для молотковой дробилки и сепараторов, производство, изготовлении запасных частей и машиностроительных компонентов по чертежам заказчиков"
+    "title": "GOLDENMILL является брендом компании LKT Group GmbH, который поставляет на рынок технические запчасти для промышленного оборудования, в частности матрицы, обечайки, ролики для пресс-гранулятора любого типа, эксцентриковые валы, молотки, оси и сито для молотковой дробилки и сепараторов",
+    "description": "GOLDENMILL компании LKT Group GmbH, технические запчасти для промышленного оборудования, в частности матрицы, обечайки, ролики для пресс-гранулятора любого типа, эксцентриковые валы, молотки, оси и сито для молотковой дробилки и сепараторов, производство, изготовлении запасных частей и машиностроительных компонентов по чертежам заказчиков"
   },
   "seo": {
-    "defaultTitle": "GoldenDie - LKE Group GmbH | Премиальные матрицы и обечайки для грануляторов",
+    "defaultTitle": "GoldenMill - LKE Group GmbH | Премиальные матрицы и обечайки для грануляторов",
     "defaultDescription": "Производство и поставка высококачественных матриц, обечаек и запасных частей для грануляторов от LKE Group GmbH. Превосходная твердость, индивидуальные размеры, доставка по всему миру. Более 15 лет опыта в производстве промышленного оборудования.",
-    "defaultKeywords": "LKE Group GmbH, GoldenDie, матрицы, обечайки, грануляторы, запасные части, производство, промышленное оборудование, индивидуальное изготовление, высокое качество, доставка по всему миру, производство гранул, грануляция, экструзия",
+    "defaultKeywords": "LKE Group GmbH, GoldenMill, матрицы, обечайки, грануляторы, запасные части, производство, промышленное оборудование, индивидуальное изготовление, высокое качество, доставка по всему миру, производство гранул, грануляция, экструзия",
     "matrix": {
-      "title": "Премиальные матрицы для грануляторов | LKE Group GmbH | GoldenDie",
+      "title": "Премиальные матрицы для грануляторов | LKE Group GmbH | GoldenMill",
       "description": "Высококачественные матрицы для грануляторов любого типа от LKE Group GmbH. Индивидуальное изготовление по чертежам заказчика, превосходная твердость и износостойкость, до 10% меньше износа по сравнению с конкурентами. Доступны плоские матрицы, кольцевые матрицы и зажимные матрицы.",
-      "keywords": "матрицы для грануляторов, LKE Group GmbH, GoldenDie, производство матриц, промышленное оборудование, запасные части, плоская матрица, кольцевая матрица, зажимная матрица, индивидуальное изготовление, высокая твердость, износостойкость, производство гранул, грануляция"
+      "keywords": "матрицы для грануляторов, LKE Group GmbH, GoldenMill, производство матриц, промышленное оборудование, запасные части, плоская матрица, кольцевая матрица, зажимная матрица, индивидуальное изготовление, высокая твердость, износостойкость, производство гранул, грануляция"
     },
     "shell": {
-      "title": "Премиальные обечайки для грануляторов | LKE Group GmbH | GoldenDie",
+      "title": "Премиальные обечайки для грануляторов | LKE Group GmbH | GoldenMill",
       "description": "Высококачественные обечайки для грануляторов от LKE Group GmbH. Различные типы поверхности (перфорированная, рифленая, рыбья кость), индивидуальные размеры, превосходная износостойкость. До 7% меньше износа по сравнению с конкурентами. Для плоских матриц, кольцевых матриц и зажимных матриц.",
-      "keywords": "обечайки для грануляторов, LKE Group GmbH, GoldenDie, ролики для пресс-гранулятора, промышленное оборудование, запасные части, перфорированная поверхность, рифленая поверхность, поверхность рыбья кость, индивидуальные размеры, высокая твердость, износостойкость, производство гранул"
+      "keywords": "обечайки для грануляторов, LKE Group GmbH, GoldenMill, ролики для пресс-гранулятора, промышленное оборудование, запасные части, перфорированная поверхность, рифленая поверхность, поверхность рыбья кость, индивидуальные размеры, высокая твердость, износостойкость, производство гранул"
     },
     "spare-parts": {
-      "title": "Премиальные запасные части для грануляторов | LKE Group GmbH | GoldenDie",
+      "title": "Премиальные запасные части для грануляторов | LKE Group GmbH | GoldenMill",
       "description": "Высококачественные запасные части для грануляторов и дробилок от LKE Group GmbH. Эксцентриковые валы, молотки, оси, сита и другие компоненты. Индивидуальное изготовление по спецификациям заказчика. Для грануляции, экструзии, измельчения, транспортировки, охлаждения, хранения и электрических систем.",
-      "keywords": "запасные части для грануляторов, LKE Group GmbH, GoldenDie, молотковые дробилки, сепараторы, промышленное оборудование, эксцентриковые валы, молотки, сита, индивидуальное изготовление, высокое качество, грануляция, экструзия, измельчение, транспортировка, охлаждение, хранение, электрические системы"
+      "keywords": "запасные части для грануляторов, LKE Group GmbH, GoldenMill, молотковые дробилки, сепараторы, промышленное оборудование, эксцентриковые валы, молотки, сита, индивидуальное изготовление, высокое качество, грануляция, экструзия, измельчение, транспортировка, охлаждение, хранение, электрические системы"
     },
     "about": {
-      "title": "О компании LKE Group GmbH | GoldenDie | Премиальный производитель промышленного оборудования",
+      "title": "О компании LKE Group GmbH | GoldenMill | Премиальный производитель промышленного оборудования",
       "description": "LKE Group GmbH - производитель высококачественных матриц, обечаек и запасных частей для грануляторов. Более 15 лет опыта, собственное производство, оборудование сертифицированное CE, международные поставки. Индивидуальное изготовление по спецификациям заказчика.",
-      "keywords": "LKE Group GmbH, GoldenDie, о компании, производство матриц, обечайки для грануляторов, запасные части, производитель промышленного оборудования, сертификация CE, индивидуальное изготовление, международные поставки, высокое качество, производство гранул"
+      "keywords": "LKE Group GmbH, GoldenMill, о компании, производство матриц, обечайки для грануляторов, запасные части, производитель промышленного оборудования, сертификация CE, индивидуальное изготовление, международные поставки, высокое качество, производство гранул"
     },
     "contacts": {
-      "title": "Контакты LKE Group GmbH | GoldenDie | Премиальный производитель промышленного оборудования",
+      "title": "Контакты LKE Group GmbH | GoldenMill | Премиальный производитель промышленного оборудования",
       "description": "Свяжитесь с LKE Group GmbH для заказа высококачественных матриц, обечаек и запасных частей для грануляторов. Экспертные консультации, детальный расчет стоимости, индивидуальные решения. Доставка по всему миру премиальных компонентов для промышленного оборудования.",
-      "keywords": "контакты LKE Group GmbH, GoldenDie, заказ матриц, обечайки для грануляторов, запасные части, связаться с производителем, промышленное оборудование, экспертные консультации, расчет стоимости, индивидуальные решения, доставка по всему миру, премиальное качество"
+      "keywords": "контакты LKE Group GmbH, GoldenMill, заказ матриц, обечайки для грануляторов, запасные части, связаться с производителем, промышленное оборудование, экспертные консультации, расчет стоимости, индивидуальные решения, доставка по всему миру, премиальное качество"
     },
     "product": {
-      "title": "{{productName}} | LKE Group GmbH | GoldenDie",
+      "title": "{{productName}} | LKE Group GmbH | GoldenMill",
       "description": "{{productName}} от LKE Group GmbH. {{productDescription}} Высококачественное изготовление, индивидуальные размеры, превосходная износостойкость. Для грануляторов и промышленного оборудования.",
-      "keywords": "{{productName}}, LKE Group GmbH, GoldenDie, матрицы, обечайки, запасные части, грануляторы, промышленное оборудование, высокое качество, индивидуальное изготовление, износостойкость, производство гранул, грануляция, экструзия"
+      "keywords": "{{productName}}, LKE Group GmbH, GoldenMill, матрицы, обечайки, запасные части, грануляторы, промышленное оборудование, высокое качество, индивидуальное изготовление, износостойкость, производство гранул, грануляция, экструзия"
     }
   },
   "granulator": "Гранулятор",
@@ -140,6 +140,11 @@
     "GM650": "GM650",
     "GM850": "GM850",
     "GM850D": "GM850D"
+  },
+  "granulatorParameters": {
+    "width": "ширина",
+    "height": "высота",
+    "length": "длина"
   },
   "diagrams": {
     "millGranulator": {
@@ -263,7 +268,7 @@
       "title": "О компании",
       "description": "Кто мы",
       "descriptionBg": "О компании",
-      "text": "«GOLDEN DIE» является брендом компании «LKT GROUP», который поставляет на рынок технические запчасти для производственного оборудования (матрицы для грануляторов, обечайки и т п).\n\nНа текущем этапе планируется размещение только матриц для грануляторов, стоит учесть, что ассортимент компании будет расширяться и для этого необходимо подготовить сопутствующий функционал на ресурсе."
+      "text": "«Создание нового направления бренда GOLDENMILL в составе компании LKT Group GmbH в 2024 году расширило ландшафт промышленных решений. Компания революционизирует подход к производству промышленного оборудования. Благодаря опытным сотрудникам они могут охватывать различные компетенции внутри компании и предлагать индивидуальные решения для конкретных проектных потребностей. От планирования 3D-установок до ввода в эксплуатацию, от электротехники до обслуживания и ремонта, они поддерживают своих клиентов.\n\nОсобое внимание заслуживает инновационный пресс гранулятор для пеллет, разработанный под брендом GOLDENMILL. Это нововведение обещает не только эффективность, но и устанавливает новые стандарты качества и производительности. С помощью комплексного подхода к оптимизации производственной цепочки обеспечивается быстрое и эффективное выполнение заказов, точно соответствующее индивидуальным требованиям клиентов.\n\nИнтеграция бренда GOLDENMILL в состав LKT Group GmbH не только укрепила рыночное положение LKT Group GmbH, но и расширила портфолио продуктов компании. Они предлагают инновационные решения для промышленности, поддерживаемые обширным сервисным предложением и сильной ориентацией на качество и удовлетворенность LKT Group GmbH, клиентов."
     },
     "history": {
       "title": "История компании",
@@ -297,7 +302,7 @@
     },
     "email": {
       "title": "E-mail",
-      "email": "info@goldendie.de"
+      "email": "info@goldenmill.de"
     },
     "phone": {
       "title": "Телефон",
@@ -317,7 +322,7 @@
     "contacts": {
       "title": "Контакты",
       "geo": "Lindenstraße 48-52, 40233 Düsseldorf, Германия",
-      "email": "info@goldendie.de",
+      "email": "info@goldenmill.de",
       "phone": "+49 (0) 211 9891272"
     },
     "social": {
@@ -325,7 +330,7 @@
     }
   },
   "subFooter": {
-    "copyright": "2023. Copyright - all rights reserved",
+    "copyright": "2025. Copyright - all rights reserved",
     "serviceInfo": "Служебная информация",
     "privacyPolicy": "Политика конфиденциальности"
   }
