--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -58,8 +58,8 @@
     "learnMore": "Подробнее",
     "contact": "Связаться",
     "all": "Все",
-    "matrices": "Матрицы",
-    "shells": "Обечайки",
+    "granulators": "Грануляторы",
+    "mixers": "Миксеры",
     "spare-parts": "Запчасти",
     "noResults": "По вашему запросу ничего не найдено",
     "title": "Продукция",
@@ -72,8 +72,8 @@
       "granulation": "Гранулирование",
       "type": "Тип",
       "productType": "Тип продукта",
-      "matrices": "Матрицы",
-      "shells": "Обечайки",
+      "granulators": "Грануляторы",
+      "mixers": "Миксеры",
       "spare-parts": "Запасные части",
       "applicationsTitle": "Области применения",
       "select": "Выбрать",
@@ -450,51 +450,51 @@
   },
   "seo": {
     "home": {
-      "title": "GoldenDie - Промышленное оборудование и запчасти",
+      "title": "GoldenMill - Промышленное оборудование и запчасти",
       "description": "Высококачественное промышленное оборудование, запчасти и решения для пеллетных прессов и промышленных объектов. Экспертное производство с современными технологиями.",
       "keywords": "промышленное оборудование, запчасти, пеллетные прессы, производство, промышленные решения"
     },
     "matrix": {
-      "title": "Матрицы для грануляторов | GoldenDie",
+      "title": "Матрицы для грануляторов | GoldenMill",
       "description": "Профессиональные матрицы для грануляторов различных типов. Высокое качество изготовления, точная геометрия, длительный срок службы.",
       "keywords": "матрицы для грануляторов, промышленные матрицы, запчасти для грануляторов"
     },
     "shell": {
-      "title": "Промышленные обечайки | GoldenDie",
+      "title": "Промышленные обечайки | GoldenMill",
       "description": "Производство промышленных обечаек высокого качества. Индивидуальный подход, точное изготовление, надежность в эксплуатации.",
       "keywords": "промышленные обечайки, производство обечаек, запчасти для оборудования"
     },
     "about": {
-      "title": "О компании GoldenDie",
-      "description": "GoldenDie - ведущий производитель промышленного оборудования и запчастей. Узнайте о нашей истории, миссии и стремлении к качеству.",
-      "keywords": "о компании goldendie, история компании, миссия, производство оборудования"
+      "title": "О компании GoldenMill",
+      "description": "GoldenMill - ведущий производитель промышленного оборудования и запчастей. Узнайте о нашей истории, миссии и стремлении к качеству.",
+      "keywords": "о компании GoldenMill, история компании, миссия, производство оборудования"
     },
     "contacts": {
-      "title": "Контакты | GoldenDie",
-      "description": "Свяжитесь с GoldenDie для заказа оборудования и запчастей. Профессиональная консультация, индивидуальный подход к каждому клиенту.",
-      "keywords": "контакты goldendie, заказ оборудования, консультация"
+      "title": "Контакты | GoldenMill",
+      "description": "Свяжитесь с GoldenMill для заказа оборудования и запчастей. Профессиональная консультация, индивидуальный подход к каждому клиенту.",
+      "keywords": "контакты GoldenMill, заказ оборудования, консультация"
     },
     "serviceInformation": {
-      "title": "Сервисная информация | GoldenDie",
-      "description": "Важная информация о сервисе и обслуживании оборудования GoldenDie. Рекомендации по эксплуатации и техническому обслуживанию.",
+      "title": "Сервисная информация | GoldenMill",
+      "description": "Важная информация о сервисе и обслуживании оборудования GoldenMill. Рекомендации по эксплуатации и техническому обслуживанию.",
       "keywords": "сервисная информация, обслуживание оборудования, техническая поддержка"
     },
     "privacyPolicy": {
-      "title": "Политика конфиденциальности | GoldenDie",
-      "description": "Политика конфиденциальности GoldenDie. Информация об обработке персональных данных и защите конфиденциальности пользователей.",
+      "title": "Политика конфиденциальности | GoldenMill",
+      "description": "Политика конфиденциальности GoldenMill. Информация об обработке персональных данных и защите конфиденциальности пользователей.",
       "keywords": "политика конфиденциальности, защита данных, персональные данные"
     },
     "product": {
       "title": "{{productName}} | Промышленное оборудование",
-      "description": "{{productDescription}}. Высококачественное промышленное оборудование от GoldenDie. Категория: {{category}}",
+      "description": "{{productDescription}}. Высококачественное промышленное оборудование от GoldenMill. Категория: {{category}}",
       "keywords": "{{productName}}, промышленное оборудование, {{category}}, производство, запчасти"
     },
     "spare-parts": {
-      "title": "Запасные части | GoldenDie - Высококачественное промышленное оборудование",
+      "title": "Запасные части | GoldenMill - Высококачественное промышленное оборудование",
       "description": "Исследуйте наш широкий ассортимент высококачественных запасных частей для промышленного оборудования. Индивидуальные решения для грануляторов и другого оборудования.",
-      "keywords": "запасные части, промышленное оборудование, грануляторы, матрицы, обечайки, промышленные установки, грануляция, GoldenDie"
+      "keywords": "запасные части, промышленное оборудование, грануляторы, матрицы, обечайки, промышленные установки, грануляция, GoldenMill"
     },
-    "defaultTitle": "GoldenDie - Промышленное оборудование и запасные части",
+    "defaultTitle": "GoldenMill - Промышленное оборудование и запасные части",
     "defaultDescription": "Высококачественное промышленное оборудование, запасные части и решения для грануляторов и промышленных объектов. Экспертное производство с использованием современных технологий.",
     "defaultKeywords": "промышленное оборудование, запасные части, грануляторы, производство, промышленные решения"
   },
